--- a/Transfer_Learning_Formative_Kingsley_Budu.ipynb
+++ b/Transfer_Learning_Formative_Kingsley_Budu.ipynb
@@ -23,7 +23,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "StIY4Q-ol_av"
       },
@@ -125,13 +125,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Dmdb5Pl0x6v2",
-        "outputId": "ee9b85bf-97f3-420b-d896-37031a89da7b"
+        "outputId": "9a8ab201-69a1-4aea-8b62-cdd4f3e2654d"
       },
       "outputs": [
         {
@@ -151,13 +151,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-5Ek9GQ5uQR8",
-        "outputId": "deaf7be8-a05f-49a7-835a-33f035f44e70"
+        "outputId": "9b8bd5ff-320e-495b-a82f-e53a1f5095ee"
       },
       "outputs": [
         {
@@ -246,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "q8IXKs35nTlT"
       },
@@ -1528,7 +1528,7 @@
       "metadata": {
         "id": "Z9vAZY3eIPn8"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1544,13 +1544,21 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 737
+          "height": 795
         },
         "id": "KqagreqDIaPy",
-        "outputId": "ff781379-1420-47ed-8466-6e6e068e45c6"
+        "outputId": "508c9ce1-28c1-4a74-efbb-420440e3bb88"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/vgg16/vgg16_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
+            "\u001b[1m58889256/58889256\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n"
+          ]
+        },
         {
           "output_type": "display_data",
           "data": {
@@ -1733,7 +1741,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cdda4a58-3297-44ec-e2f5-d5fcbe6bba26"
+        "outputId": "4a6b7734-552f-46f5-fd8c-1f00c7f67a2e"
       },
       "execution_count": null,
       "outputs": [
@@ -1742,7 +1750,19 @@
           "name": "stdout",
           "text": [
             "Epoch 1/10\n",
-            "\u001b[1m38/76\u001b[0m \u001b[32m━━━━━━━━━━\u001b[0m\u001b[37m━━━━━━━━━━\u001b[0m \u001b[1m15:37\u001b[0m 25s/step - accuracy: 0.7221 - loss: 3.6270"
+            "\u001b[1m76/76\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2205s\u001b[0m 29s/step - accuracy: 0.7627 - loss: 3.3188 - val_accuracy: 0.8538 - val_loss: 2.0092\n",
+            "Epoch 2/10\n",
+            "\u001b[1m76/76\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2231s\u001b[0m 29s/step - accuracy: 0.8722 - loss: 1.7935 - val_accuracy: 0.8688 - val_loss: 1.4295\n",
+            "Epoch 3/10\n",
+            "\u001b[1m76/76\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2233s\u001b[0m 29s/step - accuracy: 0.8967 - loss: 1.3447 - val_accuracy: 0.9003 - val_loss: 1.2123\n",
+            "Epoch 4/10\n",
+            "\u001b[1m76/76\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2248s\u001b[0m 29s/step - accuracy: 0.9317 - loss: 1.1263 - val_accuracy: 0.9070 - val_loss: 1.0846\n",
+            "Epoch 5/10\n",
+            "\u001b[1m76/76\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2233s\u001b[0m 29s/step - accuracy: 0.9347 - loss: 1.0122 - val_accuracy: 0.9136 - val_loss: 0.9727\n",
+            "Epoch 6/10\n",
+            "\u001b[1m76/76\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2185s\u001b[0m 29s/step - accuracy: 0.9399 - loss: 0.9076 - val_accuracy: 0.9286 - val_loss: 0.8808\n",
+            "Epoch 7/10\n",
+            "\u001b[1m68/76\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━━━\u001b[0m \u001b[1m3:06\u001b[0m 23s/step - accuracy: 0.9426 - loss: 0.8287"
           ]
         }
       ]
